@@ -1,12 +1,12 @@
 ##  Process this file with automake to create Makefile.in
 ##
-## $Id: $
+## $Id$
 ##
 ## This file was generated by MPC.  Any changes made directly to
 ## this file will be lost the next time it is generated.
 ##
 ## MPC Command:
-## /tao_builds/chad/ocitao/ACE_wrappers/build/linux/bin/mwc.pl -include /home/elliottc/current/MPC/config -include /home/elliottc/current/MPC/templates -include config -type automake wide_coverage.mwc
+## /tao_builds/chad/ocitao/ACE_wrappers/build/linux/bin/mwc.pl -include config -type automake wide_coverage.mwc
 
 
 
@@ -20,6 +20,8 @@ libgenerator_be_la_CPPFLAGS = \
 
 libgenerator_be_la_SOURCES = \
   generator_be.cpp
+
+libgenerator_be_la_LDFLAGS =
 
 noinst_HEADERS = \
   generator_be.h \
